--- a/movie-website-master/style.css
+++ b/movie-website-master/style.css
@@ -45,6 +45,10 @@ body {
   margin-right: 30px;
 }
 
+.menu-list-item1 {
+  color:#00ff00;
+  margin-right: 30px;
+}
 .menu-list-item.active {
   font-weight: bold;
 }
