--- a/movie-website-master/templates/views/movielist.ejs
+++ b/movie-website-master/templates/views/movielist.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>My Anime List</title>
+    <title>My Movie List</title>
     <link rel="icon" href="/img/icons/mal-logo-head.png">
     <link rel="stylesheet" href="/css/styles.css">
 
