--- a/movie-website-master/templates/views/studios.ejs
+++ b/movie-website-master/templates/views/studios.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>My Anime List</title>
+    <title>My Movie List</title>
     <link rel="icon" href="/img/icons/mal-logo-head.png">
     <link rel="stylesheet" href="/css/styles.css">
 
@@ -14,9 +14,9 @@
             <p style="color: rgb(37, 37, 87); font-weight: 700;">Studio list </p>
             <ul>
                 <% for (let studio of studios){ %>
-                    <% studioURL=encodeURIComponent(studio.STUDIO_NAME) %>
+                    <% studioURL=encodeURIComponent(studio.studio_NAME) %>
                         <li> <a class="listed" href=<%="/studio/" + studioURL %> %> >
-                                <%= studio.STUDIO_NAME %>
+                                <%= studio.studio_NAME %>
                             </a>
                         </li>
                         <% } %>
