--- a/movie-website-master/templates/views/userprofile.ejs
+++ b/movie-website-master/templates/views/userprofile.ejs
@@ -23,10 +23,10 @@
             <p style="color: rgb(37, 37, 87);font-size: larger; font-weight: 800;">Email :<span style="color: black;"> <%= userInfo.EMAIL %></span>
             </p>
             <br>
-            <p style="color: rgb(28, 28, 124);font-size: larger; font-weight: 700;"> Bio: <span style="color: black;"><%= userInfo.BIO %></span>
+            <p style="color: rgb(28, 28, 124);font-size: larger; font-weight: 700;"> Bio: <span style="color: black;"><%= userInfo.email %></span>
             </p>
             <br>
-            <p style="color: rgb(4, 4, 61);font-size: larger; font-weight: 600;">Join Date : <span style="color: black;"><%= userInfo.JOIN_DATE %></span>
+            <p style="color: rgb(4, 4, 61);font-size: larger; font-weight: 600;">Join Date : <span style="color: black;"><%= userInfo.email %></span>
             </p>
             <br>
 
