--- a/movie-website-master/templates/views/watchlist.ejs
+++ b/movie-website-master/templates/views/watchlist.ejs
@@ -15,12 +15,12 @@
                 <p>No result found</p>
                 <% } else { %>
                     <ul>
-                        <% for (let anime of animes){ %>
-                            <li> <a class="listed" href=<%="/anime/" + anime.ANIME_ID %> >
-                                    <img width="40" src=<%="/img/anime_pic/" +anime.PICTURE_ID + ".jpg" %>>
-                                    <%= anime.TITLE %>
+                        <% for (let movie of animes){ %>
+                            <li> <a class="listed" href=<%="/anime/" + movie.ID %> >
+
+                                    <%= movie.TITLE %>
                                 </a>
-                                <% if(anime.FAVOURITED==1) { %>
+                                <% if(movie.title) { %>
                                     <a class="favourited" href=<%="/user/" + username + "/favourites" %>> Favourited!
                                     </a>
                                     <% } %>
