--- a/movie-website-master/templates/partials/header.ejs
+++ b/movie-website-master/templates/partials/header.ejs
@@ -6,7 +6,7 @@
         <div class="shundor">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/animelist">Animelist</a>
+                <li><a href="/animelist">Movielist</a>
                     <ul>
                         <li><a href="/searchtags">Tags</a></li>
                         <li><a href="/genre">Genre</a></li>
