--- a/movie-website-master/templates/views/genre.ejs
+++ b/movie-website-master/templates/views/genre.ejs
@@ -10,7 +10,7 @@
 <body>
     <div class="main-content">
         <%- include('../partials/header.ejs') %>
-            <p style="color: rgb(37, 37, 87); font-weight: 700;">Showing results of <%= genre_name %> genre </p>
+            <p style="color: rgb(37, 37, 87); font-weight: 700;">Showing results of <%= genre %> genre </p>
             <ul>
                 <%- include('../partials/listedAnimes.ejs') %>
             </ul>
