--- a/movie-website-master/templates/views/genres.ejs
+++ b/movie-website-master/templates/views/genres.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>My Anime List</title>
+    <title>My Movie List</title>
     <link rel="icon" href="/img/icons/mal-logo-head.png">
     <link rel="stylesheet" href="/css/styles.css">
 
@@ -14,7 +14,7 @@
             <p style="color: rgb(37, 37, 87); font-weight: 700;">Genre list</p>
             <ul>
                 <% for (let genre of genres){ %>
-                    <li> <a class="listed" href=<%="/genre/" + genre.GENRE_NAME %> > <%= genre.GENRE_NAME %> </a>
+                    <li> <a class="listed" href=<%="/genre/" + genre.GENRE %> > <%= genre.GENRE %> </a>
                     </li>
                     <% } %>
             </ul>
