--- a/movie-website-master/templates/views/searchresults.ejs
+++ b/movie-website-master/templates/views/searchresults.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>My Anime List</title>
+    <title>My Movie List</title>
     <link rel="icon" href="/img/icons/mal-logo-head.png">
     <link rel="stylesheet" href="/css/styles.css">
 
@@ -21,23 +21,11 @@
             </ul>
             <h3 style="color:rgb(26, 20, 114);">Voice actors</h3>
             <ul>
-                <% for (let voice_actor of voice_actors){ %>
-                    <li> <a class="listed" href=<%="/personnel/" + voice_actor.PERSONNEL_ID%> >
-                            <%=voice_actor.FIRST_NAME %>
-                                <%= voice_actor.LAST_NAME %>
-                        </a>
-                    </li>
-                    <% } %>
+
             </ul>
             <h3 style="color:rgb(26, 20, 114);">Writers</h3>
             <ul>
-                <% for (let writer of writers){ %>
-                    <li> <a class="listed" href=<%="/personnel/" + writer.PERSONNEL_ID%> >
-                            <%= writer.FIRST_NAME %>
-                                <%= writer.LAST_NAME %>
-                        </a>
-                    </li>
-                    <% } %>
+
             </ul>
 
     </div>
