--- a/movie-website-master/templates/views/index.ejs
+++ b/movie-website-master/templates/views/index.ejs
@@ -12,7 +12,7 @@
         <%- include('../partials/header.ejs') %>
             <section id="homepage-top-movies" style="margin-bottom: 15%;">
                 <div style="float: left; width : 50%">
-                    <h3> <a class="home" href="/movielist/new";">Newly Released Movies</a> </h3>
+                    <h3> <a class="home" href="/movielist/new">Newly Released Movies</a> </h3>
 
                 </div>
                 <div style="float: right; width : 50%">
