--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/searchresults.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/searchresults.ejs
@@ -15,8 +15,8 @@
 
 
                     <% for (let movie of movies){ %>
-                    <li> <a class="listed" href=<%="/movie/" + movie.id%> >
-                            <%=movie.Title%>
+                    <li> <a class="listed" href=<%="/movie/" + movie.id %> >
+                            <%=movie.title %>
 
                         </a>
                     </li>
