--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/listedAnimes.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/listedAnimes.ejs
@@ -1,7 +1,8 @@
 <% for (let movie of movies){ %>
     <li>
-        <a class="listed" href=<%="/movie/" + movie.id %> >
+        <!--<a class="listed" href=<%="/movie/" + movie.id %> >
             <%= movie.title %>
-        </a>
+        </a>-->
+        <h4> <%= movie.id + ". " + movie.title %></h4>
     </li>
     <% } %>
