--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/header.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/header.ejs
@@ -6,7 +6,7 @@
         <div class="shundor">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li style="color: black">Movielist
+                <li style="color: black">Showlist
                     <ul>
                         <li><a href="/movielist">Movies</a></li>
                         <li><a href="/alltvshows">Tv Series</a></li>
