--- a/Rifah/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/header.ejs
+++ b/Rifah/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/header.ejs
@@ -8,12 +8,15 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/animelist">Movielist</a>
                     <ul>
-                        <li><a href="/searchtags">Tags</a></li>
-                        <li><a href="/genre">Genre</a></li>
-                        <li><a href="/studio">Studio</a></li>
+                        <li><a href="/allmovies">Movies</a></li>
+                        <li><a href="/alltvshows">Tv Shows</a></li>
+                        <li><a href="/Awards">Awards</a></li>
+                        <li><a href="/Merchandise">Merchandise</a></li>
+
 
                     </ul>
-                    <li><li><a href="/searchtags">Search</a>
+                <li><a href="/searchtags">Search</a></li>
+                    <li><a href="/review">Reviews</a>
 
                 </li>
                 <li><a href="/user/" + <%=username%> >Profile</a></li>
