--- a/Rifah/Rotten-Mangoes-rifah2/movie-website-master/public/css/styles.css
+++ b/Rifah/Rotten-Mangoes-rifah2/movie-website-master/public/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://images.unsplash.com/photo-1534796636912-3b95b3ab5986?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8c3RhcnJ5JTIwc2t5fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60");
+    bgcolor:#FFC0CB;
     font-family: Arial, Helvetica, sans-serif;
     max-width: 650px;
     margin: 0 auto;
