--- a/Rifah/Rotten-Mangoes-rifah2/movie-website-master/templates/views/searchresults.ejs
+++ b/Rifah/Rotten-Mangoes-rifah2/movie-website-master/templates/views/searchresults.ejs
@@ -12,28 +12,27 @@
         <%- include('../partials/header.ejs') %>
             <h3 style="color:rgb(26, 20, 114);">Movie</h3>
                 <ul>
-
-
+                   <% if(movies.length!=0){%>
                     <% for (let movie of movies){ %>
-                    <li> <a class="listed" href=<%="/movie/" + movie.id%> >
+                    <li> <a class="listed" href=<%="/singlemovie/" + movie.Id%> >
                             <%=movie.Title%>
 
                         </a>
                     </li>
-                    <% } %>
+                    </ul>
+                    <% } }%>
+        <ul>
+            <h3 style="color:rgb(26, 20, 114);">DIrector</h3>
+                    <% if(directors.length!=0){%>
+            <% console.log(directors)%>
+                    <% for(let director of directors){%>
+                    <p><%=director.Name%></p>
+                        <% } }%>
                 </ul>
             <ul>
                 <%- include('../partials/listedAnimes.ejs') %>
             </ul>
-            <h3 style="color:rgb(26, 20, 114);">Actors</h3>
-            <ul>
-                <%- include('../partials/listedCharacters.ejs') %>
-            </ul>
-            <h3 style="color:rgb(26, 20, 114);">Director</h3>
-                <a class="listed" href=<%="/movie/" + movies.id %> />
 
-
-            <h3 style="color:rgb(26, 20, 114);">Studio</h3>
 
 
             </div>
