--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/login.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/login.ejs
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/css/login.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -11,7 +11,7 @@
     </p>
     <!-- !this is important. posts to /login route -->
     <br>
-    <div class = "container" style="align-self:center; margin-right:300px;">
+    <div class = "container" style="align-self:center; margin-right:300px; position: center;">
         <form action="/login" method="post" style="text-align: center;">
             <h2>Login</h2>
             <div class="input-field">
