--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/review.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/review.ejs
@@ -18,7 +18,9 @@
     <!--<p style="font-weight: bolder; color: rgb(64, 64, 124);">
         Reviews for
     </p>-->
+    <div>
 
+    </div>
     <div>
 
         <button class="open-review" onclick="openReview()" style="background-color: rgb(78, 78, 211);"> Write/Edit review</button>
