--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/index.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/index.ejs
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+
 </head>
 
 <body>
@@ -22,47 +23,33 @@
         <ul>
             <div style="float: left; width : 50%">
                 <h2> <a class="home" href="/movielist/new" style="text-decoration-line: none; color: #EFFC20">Newly Released Movies</a> </h2>
-                <!--<div class="movie-list-wrapper">
-                            <div class="movie-list">
-                                <% for (var i = 0; i < moviesList.length; i++){ %>
-                                    <ul style="color: #ffffff; font-size: xx-large; font-style: italic; font-family: cursive">
-                                        <div style="text-decoration-line: underline;">
-                                            <h3>
-                                                <%= i+1 + ". " + moviesList[i].Title %>
-                                            </h3>
-                                        </div>
-                                        <h4 style="color: #EFFC20; font-family: cursive; font-style: italic;">Plot: </h4>
-                                        <%= moviesList[i].Plot %>
-                                    </ul>
-                                <% } %>
-                            </div>
-                        </div>-->
 
-                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+
+                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="/img/anime_pic/aot.jpg" alt= "1">
-                            <!--<div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption d-none d-md-block">
                                         <h5 style="color: white"><%= moviesList[0].Title %></h5>
                                         <p>Plot</p>
-                                    </div>-->
+                                    </div>
                         </div>
                         <div class="carousel-item">
                             <img src="/img/anime_pic/geass.jpg" alt= "1">
-                            <!--<div class="carousel-caption d-none d-md-block">
+                            <<div class="carousel-caption d-none d-md-block">
                                         <h5 style="color: white"><%= moviesList[1].Title %></h5>
                                         <p>Plot</p>
-                                    </div>-->
+                                    </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="/img/anime_pic/knb.jpg" alt= "1">
-                            <!--<div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-item ">
+                            <img src="/img/anime_pic/hms.jpg" alt= "1">
+                            <div class="carousel-caption d-none d-md-block">
                                         <h5 style="color: white"><%= moviesList[2].Title %></h5>
                                         <p>Plot</p>
-                                    </div>-->
+                                    </div>
                         </div>
 
-                        <div class="carousel-item">
+                        <div class="carousel-item ">
                             <img src="/img/anime_pic/knb.jpg" alt= "1">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5 style="color: white"><%= moviesList[2].Title %></h5>
@@ -70,29 +57,14 @@
                             </div>
                         </div>
 
-                        <div class="carousel-item">
-                            <img src="/img/anime_pic/knb.jpg" alt= "1">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 style="color: white"><%= moviesList[2].Title %></h5>
-                                <p>Plot</p>
-                            </div>
-                        </div>
-
-                        <div class="carousel-item">
-                            <img src="/img/anime_pic/knb.jpg" alt= "1">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 style="color: white"><%= moviesList[2].Title %></h5>
-                                <p>Plot</p>
-                            </div>
-                        </div>
                     </div>
-                    <a class="carousel-control-prev" href="/" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="/" role="button" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
+                        <!--<span class="sr-only">Previous</span-->>
                     </a>
-                    <a class="carousel-control-next" href="/" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="/" role="button" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
+                        <!--<span class="sr-only">Next</span>-->
                     </a>
                 </div>
             </div>
