--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/searchtags.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/searchtags.ejs
@@ -3,29 +3,38 @@
 
 <head>
     <title>Search by tags</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
+          rel="stylesheet">
 </head>
 
 <body>
+<%- include('../partials/header.ejs') %>
 
 
 
 
 
-
-<<div class="search-by-tags">
+<<div class="search-by-tags" style="padding-left: 35%">
     <section id="search">
         <!-- !SEARCH -->
-        <form class="search-bar" action="/searchresults" method="post">
-            <select class="selectpicker" data-style="btn-info" name="selectpicker">
-                <option id="title" value="title">title</option>
-                <option  id="genre" value="genre">genre</option>
+
+        <form class="d-flex" action="/searchresults" method="post">
+            <select class="form-select" aria-label="Default select example" data-style="btn-info" name="selectpicker" style="width: 100px; height: 40px">
+                <option id="title" value="title">Title</option>
+                <option  id="genre" value="genre">Genre</option>
                 <option  id="Actor" value="genre">Actor</option>
                 <option  id="Director" value="genre">Director</option>
 
             </select>
-            <input class="search-bar" type="text" placeholder="Search for anything" name="search">
-            <button type="submit">Search</button>
+            <!--<input class="search-bar" type="text" placeholder="Search for anything" name="search">
+            <button type="submit">Search</button>-->
+            <input class="form-control me-sm-2" type="text" placeholder="Search for anything" name="search" style="width: 300px; height: 40px">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
         </form>
     </section>
     </div>
