--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/userprofile2.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/userprofile2.ejs
@@ -5,8 +5,14 @@
 <head>
     <title>Users profile</title>
 
-    <link rel="icon" href="/img/icons/mal-logo-head.png">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
+          rel="stylesheet">
+
     <style>
         .form-popup {
             display: none;
