--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/header.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/partials/header.ejs
@@ -53,8 +53,12 @@
                                 <a class="nav-link" href="/register">Register</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="logout">Logout</a>
+                                <a class="nav-link" href="/logout">Logout</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/editProfile">Logout</a>
+                            </li>
+
 
                         </ul>
                         <section id="search">
