--- a/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/editProfile.ejs
+++ b/Rifah/Rifah4/Rotten-Mangoes-rifah4/Rotten-Mangoes-rifah2/movie-website-master/templates/views/editProfile.ejs
@@ -1,31 +1,24 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    <link rel="stylesheet" href="/css/register.css">
-</head>
+    <title>My Movie List</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
+</head>
 <body>
-    <p style="color:yellow; text-align: center">
-        <%= message %>
-    </p>
-    <!--<div style="align-self:center; margin-right:300px;">
-        <form action="/register" method="post" style="text-align: center;">
-            <h2 class="h2-title-auth">Register</h2>
-            <div class="input-field">
-                <input type="text" name="username" id="username" placeholder="Enter Username">
-            </div>
-            <div class="input-field">
-                <input type="email" name="email" id="email" placeholder="Enter email">
-            </div>
-            <div class="input-field">
-                <input type="password" name="password" id="password" placeholder="Enter Password">
-            </div>
-            <input type="submit" value="Register">
-        </form>
-    </div>-->
+
+    <%- include('../partials/header.ejs') %>
     <div class="container">
         <h1 style="color: #EFFC20">Register</h1>
-        <form action="/register" method="post" autocomplete="on">
+        <form action="/editProfile" method="post" autocomplete="on">
             <!--First name-->
             <div class="box">
                 <label for="username" class="fl fontLabel"> Username: </label>
@@ -94,7 +87,7 @@
             <div class="box">
                 <label for="credit" class="fl fontLabel"> Credit Card No </label>
                 <div class="fr">
-                    <input type="Credit Card No" required name="credit card No" placeholder="Credit Card No" class="textBox">
+                    <input type="text" required name="creditcard" placeholder="Credit card No" class="textBox">
                 </div>
                 <div class="clr"></div>
             </div>
@@ -124,6 +117,6 @@
             <!---Submit Button----->
         </form>
     </div>
-</body>
 
+</body>
 </html>
